--- a/interfaces/__getflywheel_local_main_.services.iclonesite.html
+++ b/interfaces/__getflywheel_local_main_.services.iclonesite.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>IDomains | @getflywheel/local</title>
+	<title>ICloneSite | @getflywheel/local</title>
 	<meta name="description" content="Documentation for @getflywheel/local">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
@@ -60,10 +60,10 @@
 					<a href="../modules/__getflywheel_local_main_.services.html">Services</a>
 				</li>
 				<li>
-					<a href="__getflywheel_local_main_.services.idomains.html">IDomains</a>
+					<a href="__getflywheel_local_main_.services.iclonesite.html">ICloneSite</a>
 				</li>
 			</ul>
-			<h1>Interface IDomains</h1>
+			<h1>Interface ICloneSite</h1>
 		</div>
 	</div>
 </header>
@@ -74,7 +74,7 @@
 				<h3>Hierarchy</h3>
 				<ul class="tsd-hierarchy">
 					<li>
-						<span class="target">IDomains</span>
+						<span class="target">ICloneSite</span>
 					</li>
 				</ul>
 			</section>
@@ -85,8 +85,8 @@
 						<section class="tsd-index-section ">
 							<h3>Properties</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="__getflywheel_local_main_.services.idomains.html#new" class="tsd-kind-icon">new</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="__getflywheel_local_main_.services.idomains.html#old" class="tsd-kind-icon">old</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="__getflywheel_local_main_.services.iclonesite.html#newsitename" class="tsd-kind-icon">new<wbr>Site<wbr>Name</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="__getflywheel_local_main_.services.iclonesite.html#site" class="tsd-kind-icon">site</a></li>
 							</ul>
 						</section>
 					</div>
@@ -95,22 +95,22 @@
 			<section class="tsd-panel-group tsd-member-group ">
 				<h2>Properties</h2>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
-					<a name="new" class="tsd-anchor"></a>
-					<h3>new</h3>
-					<div class="tsd-signature tsd-kind-icon">new<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
+					<a name="newsitename" class="tsd-anchor"></a>
+					<h3>new<wbr>Site<wbr>Name</h3>
+					<div class="tsd-signature tsd-kind-icon">new<wbr>Site<wbr>Name<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/9c6e6bc/main.d.ts#L837">main.d.ts:837</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/9c6e6bc/main.d.ts#L897">main.d.ts:897</a></li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
-					<a name="old" class="tsd-anchor"></a>
-					<h3>old</h3>
-					<div class="tsd-signature tsd-kind-icon">old<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
+					<a name="site" class="tsd-anchor"></a>
+					<h3>site</h3>
+					<div class="tsd-signature tsd-kind-icon">site<span class="tsd-signature-symbol">:</span> <a href="../classes/__getflywheel_local_.site.html" class="tsd-signature-type">Site</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/9c6e6bc/main.d.ts#L836">main.d.ts:836</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/9c6e6bc/main.d.ts#L896">main.d.ts:896</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -216,30 +216,30 @@
 					<li class=" tsd-kind-interface tsd-parent-kind-namespace">
 						<a href="__getflywheel_local_main_.services.iblueprintsoptions.html" class="tsd-kind-icon">IBlueprints<wbr>Options</a>
 					</li>
-					<li class=" tsd-kind-interface tsd-parent-kind-namespace">
+				</ul>
+				<ul class="current">
+					<li class="current tsd-kind-interface tsd-parent-kind-namespace">
 						<a href="__getflywheel_local_main_.services.iclonesite.html" class="tsd-kind-icon">IClone<wbr>Site</a>
+						<ul>
+							<li class=" tsd-kind-property tsd-parent-kind-interface">
+								<a href="__getflywheel_local_main_.services.iclonesite.html#newsitename" class="tsd-kind-icon">new<wbr>Site<wbr>Name</a>
+							</li>
+							<li class=" tsd-kind-property tsd-parent-kind-interface">
+								<a href="__getflywheel_local_main_.services.iclonesite.html#site" class="tsd-kind-icon">site</a>
+							</li>
+						</ul>
 					</li>
+				</ul>
+				<ul class="after-current">
 					<li class=" tsd-kind-interface tsd-parent-kind-namespace">
 						<a href="__getflywheel_local_main_.services.ideletesite.html" class="tsd-kind-icon">IDelete<wbr>Site</a>
 					</li>
 					<li class=" tsd-kind-interface tsd-parent-kind-namespace">
 						<a href="__getflywheel_local_main_.services.ideletesites.html" class="tsd-kind-icon">IDelete<wbr>Sites</a>
 					</li>
-				</ul>
-				<ul class="current">
-					<li class="current tsd-kind-interface tsd-parent-kind-namespace">
+					<li class=" tsd-kind-interface tsd-parent-kind-namespace">
 						<a href="__getflywheel_local_main_.services.idomains.html" class="tsd-kind-icon">IDomains</a>
-						<ul>
-							<li class=" tsd-kind-property tsd-parent-kind-interface">
-								<a href="__getflywheel_local_main_.services.idomains.html#new" class="tsd-kind-icon">new</a>
-							</li>
-							<li class=" tsd-kind-property tsd-parent-kind-interface">
-								<a href="__getflywheel_local_main_.services.idomains.html#old" class="tsd-kind-icon">old</a>
-							</li>
-						</ul>
 					</li>
-				</ul>
-				<ul class="after-current">
 					<li class=" tsd-kind-interface tsd-parent-kind-namespace">
 						<a href="__getflywheel_local_main_.services.iexportsite.html" class="tsd-kind-icon">IExport<wbr>Site</a>
 					</li>
