--- a/modules/__getflywheel_local_main_.services.html
+++ b/modules/__getflywheel_local_main_.services.html
@@ -100,6 +100,7 @@
 								<li class="tsd-kind-class tsd-parent-kind-namespace"><a href="../classes/__getflywheel_local_main_.services.appstate.html" class="tsd-kind-icon">App<wbr>State</a></li>
 								<li class="tsd-kind-class tsd-parent-kind-namespace"><a href="../classes/__getflywheel_local_main_.services.blueprints.html" class="tsd-kind-icon">Blueprints</a></li>
 								<li class="tsd-kind-class tsd-parent-kind-namespace"><a href="../classes/__getflywheel_local_main_.services.changesitedomain.html" class="tsd-kind-icon">Change<wbr>Site<wbr>Domain</a></li>
+								<li class="tsd-kind-class tsd-parent-kind-namespace"><a href="../classes/__getflywheel_local_main_.services.clonesite.html" class="tsd-kind-icon">Clone<wbr>Site</a></li>
 								<li class="tsd-kind-class tsd-parent-kind-namespace"><a href="../classes/__getflywheel_local_main_.services.configtemplates.html" class="tsd-kind-icon">Config<wbr>Templates</a></li>
 								<li class="tsd-kind-class tsd-parent-kind-namespace"><a href="../classes/__getflywheel_local_main_.services.deletesite.html" class="tsd-kind-icon">Delete<wbr>Site</a></li>
 								<li class="tsd-kind-class tsd-parent-kind-namespace"><a href="../classes/__getflywheel_local_main_.services.exportsite.html" class="tsd-kind-icon">Export<wbr>Site</a></li>
@@ -123,6 +124,7 @@
 							<ul class="tsd-index-list">
 								<li class="tsd-kind-interface tsd-parent-kind-namespace"><a href="../interfaces/__getflywheel_local_main_.services.iaddsite.html" class="tsd-kind-icon">IAdd<wbr>Site</a></li>
 								<li class="tsd-kind-interface tsd-parent-kind-namespace"><a href="../interfaces/__getflywheel_local_main_.services.iblueprintsoptions.html" class="tsd-kind-icon">IBlueprints<wbr>Options</a></li>
+								<li class="tsd-kind-interface tsd-parent-kind-namespace"><a href="../interfaces/__getflywheel_local_main_.services.iclonesite.html" class="tsd-kind-icon">IClone<wbr>Site</a></li>
 								<li class="tsd-kind-interface tsd-parent-kind-namespace"><a href="../interfaces/__getflywheel_local_main_.services.ideletesite.html" class="tsd-kind-icon">IDelete<wbr>Site</a></li>
 								<li class="tsd-kind-interface tsd-parent-kind-namespace"><a href="../interfaces/__getflywheel_local_main_.services.ideletesites.html" class="tsd-kind-icon">IDelete<wbr>Sites</a></li>
 								<li class="tsd-kind-interface tsd-parent-kind-namespace"><a href="../interfaces/__getflywheel_local_main_.services.idomains.html" class="tsd-kind-icon">IDomains</a></li>
@@ -151,7 +153,7 @@
 					<div class="tsd-signature tsd-kind-icon">Port<wbr>Allocation<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">{ </span>blacklistedPorts<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">number</span><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol">; </span>ports<span class="tsd-signature-symbol">: </span><span class="tsd-signature-symbol">{}</span><span class="tsd-signature-symbol"> }</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/160c078/main.d.ts#L973">main.d.ts:973</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/9c6e6bc/main.d.ts#L988">main.d.ts:988</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-type-declaration">
@@ -177,7 +179,7 @@
 					<div class="tsd-signature tsd-kind-icon">Port<wbr>Pool<wbr>Allocation<wbr>Request<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">{}</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/160c078/main.d.ts#L969">main.d.ts:969</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/9c6e6bc/main.d.ts#L984">main.d.ts:984</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-type-declaration">
@@ -195,7 +197,7 @@
 					<div class="tsd-signature tsd-kind-icon">Port<wbr>Service<wbr>Allocation<wbr>Request<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">{}</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/160c078/main.d.ts#L965">main.d.ts:965</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/9c6e6bc/main.d.ts#L980">main.d.ts:980</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-type-declaration">
@@ -253,6 +255,9 @@
 						<a href="../classes/__getflywheel_local_main_.services.changesitedomain.html" class="tsd-kind-icon">Change<wbr>Site<wbr>Domain</a>
 					</li>
 					<li class=" tsd-kind-class tsd-parent-kind-namespace">
+						<a href="../classes/__getflywheel_local_main_.services.clonesite.html" class="tsd-kind-icon">Clone<wbr>Site</a>
+					</li>
+					<li class=" tsd-kind-class tsd-parent-kind-namespace">
 						<a href="../classes/__getflywheel_local_main_.services.configtemplates.html" class="tsd-kind-icon">Config<wbr>Templates</a>
 					</li>
 					<li class=" tsd-kind-class tsd-parent-kind-namespace">
@@ -305,6 +310,9 @@
 					</li>
 					<li class=" tsd-kind-interface tsd-parent-kind-namespace">
 						<a href="../interfaces/__getflywheel_local_main_.services.iblueprintsoptions.html" class="tsd-kind-icon">IBlueprints<wbr>Options</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-parent-kind-namespace">
+						<a href="../interfaces/__getflywheel_local_main_.services.iclonesite.html" class="tsd-kind-icon">IClone<wbr>Site</a>
 					</li>
 					<li class=" tsd-kind-interface tsd-parent-kind-namespace">
 						<a href="../interfaces/__getflywheel_local_main_.services.ideletesite.html" class="tsd-kind-icon">IDelete<wbr>Site</a>
