--- a/classes/__getflywheel_local_main_.services.adminer.html
+++ b/classes/__getflywheel_local_main_.services.adminer.html
@@ -104,7 +104,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/160c078/main.d.ts#L697">main.d.ts:697</a></li>
+									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/9c6e6bc/main.d.ts#L698">main.d.ts:698</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
@@ -121,7 +121,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/160c078/main.d.ts#L699">main.d.ts:699</a></li>
+									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/9c6e6bc/main.d.ts#L700">main.d.ts:700</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -192,6 +192,9 @@
 						<a href="__getflywheel_local_main_.services.changesitedomain.html" class="tsd-kind-icon">Change<wbr>Site<wbr>Domain</a>
 					</li>
 					<li class=" tsd-kind-class tsd-parent-kind-namespace">
+						<a href="__getflywheel_local_main_.services.clonesite.html" class="tsd-kind-icon">Clone<wbr>Site</a>
+					</li>
+					<li class=" tsd-kind-class tsd-parent-kind-namespace">
 						<a href="__getflywheel_local_main_.services.configtemplates.html" class="tsd-kind-icon">Config<wbr>Templates</a>
 					</li>
 					<li class=" tsd-kind-class tsd-parent-kind-namespace">
@@ -244,6 +247,9 @@
 					</li>
 					<li class=" tsd-kind-interface tsd-parent-kind-namespace">
 						<a href="../interfaces/__getflywheel_local_main_.services.iblueprintsoptions.html" class="tsd-kind-icon">IBlueprints<wbr>Options</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-parent-kind-namespace">
+						<a href="../interfaces/__getflywheel_local_main_.services.iclonesite.html" class="tsd-kind-icon">IClone<wbr>Site</a>
 					</li>
 					<li class=" tsd-kind-interface tsd-parent-kind-namespace">
 						<a href="../interfaces/__getflywheel_local_main_.services.ideletesite.html" class="tsd-kind-icon">IDelete<wbr>Site</a>
