--- a/classes/__getflywheel_local_main_.services.importsite.html
+++ b/classes/__getflywheel_local_main_.services.importsite.html
@@ -105,7 +105,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/160c078/main.d.ts#L863">main.d.ts:863</a></li>
+									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/9c6e6bc/main.d.ts#L864">main.d.ts:864</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -128,7 +128,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/160c078/main.d.ts#L865">main.d.ts:865</a></li>
+									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/9c6e6bc/main.d.ts#L866">main.d.ts:866</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -154,7 +154,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/160c078/main.d.ts#L861">main.d.ts:861</a></li>
+									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/9c6e6bc/main.d.ts#L862">main.d.ts:862</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -211,6 +211,9 @@
 					</li>
 					<li class=" tsd-kind-class tsd-parent-kind-namespace">
 						<a href="__getflywheel_local_main_.services.changesitedomain.html" class="tsd-kind-icon">Change<wbr>Site<wbr>Domain</a>
+					</li>
+					<li class=" tsd-kind-class tsd-parent-kind-namespace">
+						<a href="__getflywheel_local_main_.services.clonesite.html" class="tsd-kind-icon">Clone<wbr>Site</a>
 					</li>
 					<li class=" tsd-kind-class tsd-parent-kind-namespace">
 						<a href="__getflywheel_local_main_.services.configtemplates.html" class="tsd-kind-icon">Config<wbr>Templates</a>
@@ -280,6 +283,9 @@
 					</li>
 					<li class=" tsd-kind-interface tsd-parent-kind-namespace">
 						<a href="../interfaces/__getflywheel_local_main_.services.iblueprintsoptions.html" class="tsd-kind-icon">IBlueprints<wbr>Options</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-parent-kind-namespace">
+						<a href="../interfaces/__getflywheel_local_main_.services.iclonesite.html" class="tsd-kind-icon">IClone<wbr>Site</a>
 					</li>
 					<li class=" tsd-kind-interface tsd-parent-kind-namespace">
 						<a href="../interfaces/__getflywheel_local_main_.services.ideletesite.html" class="tsd-kind-icon">IDelete<wbr>Site</a>
