--- a/interfaces/__getflywheel_local_main_.servicecontainerservices.html
+++ b/interfaces/__getflywheel_local_main_.servicecontainerservices.html
@@ -89,6 +89,7 @@
 								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="__getflywheel_local_main_.servicecontainerservices.html#appstate" class="tsd-kind-icon">app<wbr>State</a></li>
 								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="__getflywheel_local_main_.servicecontainerservices.html#blueprints" class="tsd-kind-icon">blueprints</a></li>
 								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="__getflywheel_local_main_.servicecontainerservices.html#changesitedomain" class="tsd-kind-icon">change<wbr>Site<wbr>Domain</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="__getflywheel_local_main_.servicecontainerservices.html#clonesite" class="tsd-kind-icon">clone<wbr>Site</a></li>
 								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="__getflywheel_local_main_.servicecontainerservices.html#configtemplates" class="tsd-kind-icon">config<wbr>Templates</a></li>
 								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="__getflywheel_local_main_.servicecontainerservices.html#deletesite" class="tsd-kind-icon">delete<wbr>Site</a></li>
 								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="__getflywheel_local_main_.servicecontainerservices.html#electron" class="tsd-kind-icon">electron</a></li>
@@ -124,7 +125,7 @@
 					<div class="tsd-signature tsd-kind-icon">add<wbr>Site<span class="tsd-signature-symbol">:</span> <a href="../classes/__getflywheel_local_main_.services.addsite.html" class="tsd-signature-type">AddSite</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/160c078/main.d.ts#L29">main.d.ts:29</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/9c6e6bc/main.d.ts#L29">main.d.ts:29</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -134,7 +135,7 @@
 					<div class="tsd-signature tsd-kind-icon">addon<wbr>Installer<span class="tsd-signature-symbol">:</span> <a href="../classes/__getflywheel_local_main_.services.addoninstaller.html" class="tsd-signature-type">AddonInstaller</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/160c078/main.d.ts#L22">main.d.ts:22</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/9c6e6bc/main.d.ts#L22">main.d.ts:22</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -144,7 +145,7 @@
 					<div class="tsd-signature tsd-kind-icon">addon<wbr>Loader<span class="tsd-signature-symbol">:</span> <a href="../classes/__getflywheel_local_main_.services.addonloader.html" class="tsd-signature-type">AddonLoader</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/160c078/main.d.ts#L15">main.d.ts:15</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/9c6e6bc/main.d.ts#L15">main.d.ts:15</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -154,7 +155,7 @@
 					<div class="tsd-signature tsd-kind-icon">adminer<span class="tsd-signature-symbol">:</span> <a href="../classes/__getflywheel_local_main_.services.adminer.html" class="tsd-signature-type">Adminer</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/160c078/main.d.ts#L16">main.d.ts:16</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/9c6e6bc/main.d.ts#L16">main.d.ts:16</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -164,7 +165,7 @@
 					<div class="tsd-signature tsd-kind-icon">app<wbr>State<span class="tsd-signature-symbol">:</span> <a href="../classes/__getflywheel_local_main_.services.appstate.html" class="tsd-signature-type">AppState</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/160c078/main.d.ts#L21">main.d.ts:21</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/9c6e6bc/main.d.ts#L21">main.d.ts:21</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -174,7 +175,7 @@
 					<div class="tsd-signature tsd-kind-icon">blueprints<span class="tsd-signature-symbol">:</span> <a href="../classes/__getflywheel_local_main_.services.blueprints.html" class="tsd-signature-type">Blueprints</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/160c078/main.d.ts#L42">main.d.ts:42</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/9c6e6bc/main.d.ts#L43">main.d.ts:43</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -184,7 +185,17 @@
 					<div class="tsd-signature tsd-kind-icon">change<wbr>Site<wbr>Domain<span class="tsd-signature-symbol">:</span> <a href="../classes/__getflywheel_local_main_.services.changesitedomain.html" class="tsd-signature-type">ChangeSiteDomain</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/160c078/main.d.ts#L27">main.d.ts:27</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/9c6e6bc/main.d.ts#L27">main.d.ts:27</a></li>
+						</ul>
+					</aside>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
+					<a name="clonesite" class="tsd-anchor"></a>
+					<h3>clone<wbr>Site</h3>
+					<div class="tsd-signature tsd-kind-icon">clone<wbr>Site<span class="tsd-signature-symbol">:</span> <a href="../classes/__getflywheel_local_main_.services.clonesite.html" class="tsd-signature-type">CloneSite</a></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/9c6e6bc/main.d.ts#L30">main.d.ts:30</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -194,7 +205,7 @@
 					<div class="tsd-signature tsd-kind-icon">config<wbr>Templates<span class="tsd-signature-symbol">:</span> <a href="../classes/__getflywheel_local_main_.services.configtemplates.html" class="tsd-signature-type">ConfigTemplates</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/160c078/main.d.ts#L36">main.d.ts:36</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/9c6e6bc/main.d.ts#L37">main.d.ts:37</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -204,7 +215,7 @@
 					<div class="tsd-signature tsd-kind-icon">delete<wbr>Site<span class="tsd-signature-symbol">:</span> <a href="../classes/__getflywheel_local_main_.services.deletesite.html" class="tsd-signature-type">DeleteSite</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/160c078/main.d.ts#L31">main.d.ts:31</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/9c6e6bc/main.d.ts#L32">main.d.ts:32</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -214,7 +225,7 @@
 					<div class="tsd-signature tsd-kind-icon">electron<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">typeof </span><span class="tsd-signature-type">Electron</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/160c078/main.d.ts#L17">main.d.ts:17</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/9c6e6bc/main.d.ts#L17">main.d.ts:17</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -224,7 +235,7 @@
 					<div class="tsd-signature tsd-kind-icon">export<wbr>Site<span class="tsd-signature-symbol">:</span> <a href="../classes/__getflywheel_local_main_.services.exportsite.html" class="tsd-signature-type">ExportSite</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/160c078/main.d.ts#L30">main.d.ts:30</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/9c6e6bc/main.d.ts#L31">main.d.ts:31</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -234,7 +245,7 @@
 					<div class="tsd-signature tsd-kind-icon">format<wbr>Home<wbr>Path<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">typeof </span><a href="../modules/__getflywheel_local_main_.html#formathomepath" class="tsd-signature-type">formatHomePath</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/160c078/main.d.ts#L41">main.d.ts:41</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/9c6e6bc/main.d.ts#L42">main.d.ts:42</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -244,7 +255,7 @@
 					<div class="tsd-signature tsd-kind-icon">import<wbr>Site<span class="tsd-signature-symbol">:</span> <a href="../classes/__getflywheel_local_main_.services.importsite.html" class="tsd-signature-type">ImportSite</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/160c078/main.d.ts#L28">main.d.ts:28</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/9c6e6bc/main.d.ts#L28">main.d.ts:28</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -254,7 +265,7 @@
 					<div class="tsd-signature tsd-kind-icon">lightning<wbr>Services<span class="tsd-signature-symbol">:</span> <a href="../classes/__getflywheel_local_main_.services.lightningservices.html" class="tsd-signature-type">LightningServices</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/160c078/main.d.ts#L43">main.d.ts:43</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/9c6e6bc/main.d.ts#L44">main.d.ts:44</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -264,7 +275,7 @@
 					<div class="tsd-signature tsd-kind-icon">local<wbr>Logger<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">Winston.Logger</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/160c078/main.d.ts#L37">main.d.ts:37</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/9c6e6bc/main.d.ts#L38">main.d.ts:38</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -274,7 +285,7 @@
 					<div class="tsd-signature tsd-kind-icon">multi<wbr>Site<span class="tsd-signature-symbol">:</span> <a href="../classes/__getflywheel_local_main_.services.multisite.html" class="tsd-signature-type">MultiSite</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/160c078/main.d.ts#L39">main.d.ts:39</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/9c6e6bc/main.d.ts#L40">main.d.ts:40</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -284,7 +295,7 @@
 					<div class="tsd-signature tsd-kind-icon">ports<span class="tsd-signature-symbol">:</span> <a href="../classes/__getflywheel_local_main_.services.ports.html" class="tsd-signature-type">Ports</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/160c078/main.d.ts#L35">main.d.ts:35</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/9c6e6bc/main.d.ts#L36">main.d.ts:36</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -294,7 +305,7 @@
 					<div class="tsd-signature tsd-kind-icon">router<span class="tsd-signature-symbol">:</span> <a href="../classes/__getflywheel_local_main_.services.router.html" class="tsd-signature-type">Router</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/160c078/main.d.ts#L40">main.d.ts:40</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/9c6e6bc/main.d.ts#L41">main.d.ts:41</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -304,7 +315,7 @@
 					<div class="tsd-signature tsd-kind-icon">sendIPCEvent<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">typeof </span><a href="../modules/__getflywheel_local_main_.html#sendipcevent" class="tsd-signature-type">sendIPCEvent</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/160c078/main.d.ts#L20">main.d.ts:20</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/9c6e6bc/main.d.ts#L20">main.d.ts:20</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -314,7 +325,7 @@
 					<div class="tsd-signature tsd-kind-icon">sequel<wbr>Pro<span class="tsd-signature-symbol">:</span> <a href="../classes/__getflywheel_local_main_.services.sequelpro.html" class="tsd-signature-type">SequelPro</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/160c078/main.d.ts#L26">main.d.ts:26</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/9c6e6bc/main.d.ts#L26">main.d.ts:26</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -324,7 +335,7 @@
 					<div class="tsd-signature tsd-kind-icon">site<wbr>Data<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">typeof </span><a href="../classes/__getflywheel_local_main_.sitedata.html" class="tsd-signature-type">SiteData</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/160c078/main.d.ts#L18">main.d.ts:18</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/9c6e6bc/main.d.ts#L18">main.d.ts:18</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -334,7 +345,7 @@
 					<div class="tsd-signature tsd-kind-icon">site<wbr>Database<span class="tsd-signature-symbol">:</span> <a href="../classes/__getflywheel_local_main_.services.sitedatabase.html" class="tsd-signature-type">SiteDatabase</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/160c078/main.d.ts#L25">main.d.ts:25</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/9c6e6bc/main.d.ts#L25">main.d.ts:25</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -344,7 +355,7 @@
 					<div class="tsd-signature tsd-kind-icon">site<wbr>Info<span class="tsd-signature-symbol">:</span> <a href="../classes/__getflywheel_local_main_.services.siteinfo.html" class="tsd-signature-type">SiteInfo</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/160c078/main.d.ts#L32">main.d.ts:32</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/9c6e6bc/main.d.ts#L33">main.d.ts:33</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -354,7 +365,7 @@
 					<div class="tsd-signature tsd-kind-icon">site<wbr>Process<wbr>Manager<span class="tsd-signature-symbol">:</span> <a href="../classes/__getflywheel_local_main_.services.siteprocessmanager.html" class="tsd-signature-type">SiteProcessManager</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/160c078/main.d.ts#L24">main.d.ts:24</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/9c6e6bc/main.d.ts#L24">main.d.ts:24</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -364,7 +375,7 @@
 					<div class="tsd-signature tsd-kind-icon">site<wbr>Provisioner<span class="tsd-signature-symbol">:</span> <a href="../classes/__getflywheel_local_main_.services.siteprovisioner.html" class="tsd-signature-type">SiteProvisioner</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/160c078/main.d.ts#L23">main.d.ts:23</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/9c6e6bc/main.d.ts#L23">main.d.ts:23</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -374,7 +385,7 @@
 					<div class="tsd-signature tsd-kind-icon">site<wbr>Shell<wbr>Entry<span class="tsd-signature-symbol">:</span> <a href="../classes/__getflywheel_local_main_.services.siteshellentry.html" class="tsd-signature-type">SiteShellEntry</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/160c078/main.d.ts#L33">main.d.ts:33</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/9c6e6bc/main.d.ts#L34">main.d.ts:34</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -384,7 +395,7 @@
 					<div class="tsd-signature tsd-kind-icon">user<wbr>Data<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">typeof </span><a href="../classes/__getflywheel_local_main_.userdata.html" class="tsd-signature-type">UserData</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/160c078/main.d.ts#L19">main.d.ts:19</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/9c6e6bc/main.d.ts#L19">main.d.ts:19</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -394,7 +405,7 @@
 					<div class="tsd-signature tsd-kind-icon">wp<wbr>Cli<span class="tsd-signature-symbol">:</span> <a href="../classes/__getflywheel_local_main_.services.wpcli.html" class="tsd-signature-type">WpCli</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/160c078/main.d.ts#L34">main.d.ts:34</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/9c6e6bc/main.d.ts#L35">main.d.ts:35</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -404,7 +415,7 @@
 					<div class="tsd-signature tsd-kind-icon">x509<wbr>Cert<span class="tsd-signature-symbol">:</span> <a href="../classes/__getflywheel_local_main_.services.x509cert.html" class="tsd-signature-type">X509Cert</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/160c078/main.d.ts#L38">main.d.ts:38</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/9c6e6bc/main.d.ts#L39">main.d.ts:39</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -508,6 +519,9 @@
 							</li>
 							<li class=" tsd-kind-property tsd-parent-kind-interface">
 								<a href="__getflywheel_local_main_.servicecontainerservices.html#changesitedomain" class="tsd-kind-icon">change<wbr>Site<wbr>Domain</a>
+							</li>
+							<li class=" tsd-kind-property tsd-parent-kind-interface">
+								<a href="__getflywheel_local_main_.servicecontainerservices.html#clonesite" class="tsd-kind-icon">clone<wbr>Site</a>
 							</li>
 							<li class=" tsd-kind-property tsd-parent-kind-interface">
 								<a href="__getflywheel_local_main_.servicecontainerservices.html#configtemplates" class="tsd-kind-icon">config<wbr>Templates</a>
