--- a/interfaces/__getflywheel_local_main_.services.iaddsite.html
+++ b/interfaces/__getflywheel_local_main_.services.iaddsite.html
@@ -102,7 +102,7 @@
 					<div class="tsd-signature tsd-kind-icon">go<wbr>ToSite<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/160c078/main.d.ts#L877">main.d.ts:877</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/9c6e6bc/main.d.ts#L878">main.d.ts:878</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -112,7 +112,7 @@
 					<div class="tsd-signature tsd-kind-icon">installWP<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/160c078/main.d.ts#L878">main.d.ts:878</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/9c6e6bc/main.d.ts#L879">main.d.ts:879</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -122,7 +122,7 @@
 					<div class="tsd-signature tsd-kind-icon">new<wbr>Site<wbr>Info<span class="tsd-signature-symbol">:</span> <a href="__getflywheel_local_.newsiteinfo.html" class="tsd-signature-type">NewSiteInfo</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/160c078/main.d.ts#L875">main.d.ts:875</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/9c6e6bc/main.d.ts#L876">main.d.ts:876</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -132,7 +132,7 @@
 					<div class="tsd-signature tsd-kind-icon">wp<wbr>Credentials<span class="tsd-signature-symbol">:</span> <a href="__getflywheel_local_main_.services.iwpcredentials.html" class="tsd-signature-type">IWPCredentials</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/160c078/main.d.ts#L876">main.d.ts:876</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/9c6e6bc/main.d.ts#L877">main.d.ts:877</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -180,6 +180,9 @@
 					</li>
 					<li class=" tsd-kind-class tsd-parent-kind-namespace">
 						<a href="../classes/__getflywheel_local_main_.services.changesitedomain.html" class="tsd-kind-icon">Change<wbr>Site<wbr>Domain</a>
+					</li>
+					<li class=" tsd-kind-class tsd-parent-kind-namespace">
+						<a href="../classes/__getflywheel_local_main_.services.clonesite.html" class="tsd-kind-icon">Clone<wbr>Site</a>
 					</li>
 					<li class=" tsd-kind-class tsd-parent-kind-namespace">
 						<a href="../classes/__getflywheel_local_main_.services.configtemplates.html" class="tsd-kind-icon">Config<wbr>Templates</a>
@@ -252,6 +255,9 @@
 				<ul class="after-current">
 					<li class=" tsd-kind-interface tsd-parent-kind-namespace">
 						<a href="__getflywheel_local_main_.services.iblueprintsoptions.html" class="tsd-kind-icon">IBlueprints<wbr>Options</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-parent-kind-namespace">
+						<a href="__getflywheel_local_main_.services.iclonesite.html" class="tsd-kind-icon">IClone<wbr>Site</a>
 					</li>
 					<li class=" tsd-kind-interface tsd-parent-kind-namespace">
 						<a href="__getflywheel_local_main_.services.ideletesite.html" class="tsd-kind-icon">IDelete<wbr>Site</a>
