--- a/interfaces/__getflywheel_local_main_.services.ideletesites.html
+++ b/interfaces/__getflywheel_local_main_.services.ideletesites.html
@@ -101,7 +101,7 @@
 					<div class="tsd-signature tsd-kind-icon">site<wbr>Ids<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">Site</span><span class="tsd-signature-symbol">[</span><span class="tsd-signature-type">"id"</span><span class="tsd-signature-symbol">]</span><span class="tsd-signature-symbol">[]</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/160c078/main.d.ts#L912">main.d.ts:912</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/9c6e6bc/main.d.ts#L927">main.d.ts:927</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -111,7 +111,7 @@
 					<div class="tsd-signature tsd-kind-icon">trash<wbr>Files<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/160c078/main.d.ts#L913">main.d.ts:913</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/9c6e6bc/main.d.ts#L928">main.d.ts:928</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -121,7 +121,7 @@
 					<div class="tsd-signature tsd-kind-icon">update<wbr>Hosts<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/160c078/main.d.ts#L914">main.d.ts:914</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/9c6e6bc/main.d.ts#L929">main.d.ts:929</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -169,6 +169,9 @@
 					</li>
 					<li class=" tsd-kind-class tsd-parent-kind-namespace">
 						<a href="../classes/__getflywheel_local_main_.services.changesitedomain.html" class="tsd-kind-icon">Change<wbr>Site<wbr>Domain</a>
+					</li>
+					<li class=" tsd-kind-class tsd-parent-kind-namespace">
+						<a href="../classes/__getflywheel_local_main_.services.clonesite.html" class="tsd-kind-icon">Clone<wbr>Site</a>
 					</li>
 					<li class=" tsd-kind-class tsd-parent-kind-namespace">
 						<a href="../classes/__getflywheel_local_main_.services.configtemplates.html" class="tsd-kind-icon">Config<wbr>Templates</a>
@@ -223,6 +226,9 @@
 					</li>
 					<li class=" tsd-kind-interface tsd-parent-kind-namespace">
 						<a href="__getflywheel_local_main_.services.iblueprintsoptions.html" class="tsd-kind-icon">IBlueprints<wbr>Options</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-parent-kind-namespace">
+						<a href="__getflywheel_local_main_.services.iclonesite.html" class="tsd-kind-icon">IClone<wbr>Site</a>
 					</li>
 					<li class=" tsd-kind-interface tsd-parent-kind-namespace">
 						<a href="__getflywheel_local_main_.services.ideletesite.html" class="tsd-kind-icon">IDelete<wbr>Site</a>
